--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@nuxtjs/axios": "^5.4.1",
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.11",
-    "nuxt": "^2.4.0"
+    "nuxt": "^2.4.0",
+    "universal-cookie": "^3.0.7"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
